ajout de la notion "en construction"

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <h1> Recommandation de films</h1>
 
 <h2> Bonjour, bienvenue sur Wild SiriFy !</h2>
+   <h2> Site en cours de construction </h2>
 
 <form method="post" action="traitement.php"> 
    <p> 
