--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <img class="right" src="https://i.ibb.co/KmT6q9k/logo.png" width="100" height="125" alt="logo" border="0" title = "logo">
 <img class="left" src="https://i.ibb.co/KmT6q9k/logo.png" width="100" height="125" alt="logo" border="0" title = "logo">
 <h1> Wild SiriFy </h1>
-<h1> Recommandation de films</h1>
+<h1> Recommandation Musicale</h1>
 
 <h2> Bonjour, bienvenue sur Wild SiriFy !</h2>
    <h2> Site en cours de construction </h2>
